force-app/main/default/objects/ConversationHistory__c/ConversationHistory__c.object-meta.xml
<CustomObject>
    <label>Histórico do WhatsApp</label>
    <nameField>
        <label>Nome do histórico de conversa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Históricos do WhatsApp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>