force-app/main/default/objects/ConversationHistory__c/fields/Created_at__c.field-meta.xml
<CustomField>
    <fullName>Created_at__c</fullName>
    <label>Criado em</label>
    <type>DateTime</type>
</CustomField>