force-app/main/default/objects/ConversationHistory__c/fields/Deleted_at__c.field-meta.xml
<CustomField>
    <fullName>Deleted_at__c</fullName>
    <label>Deletado em</label>
    <type>DateTime</type>
</CustomField>