force-app/main/default/objects/ConversationHistory__c/fields/Employee_email__c.field-meta.xml
<CustomField>
    <fullName>Employee_email__c</fullName>
    <label>Email do vendedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>