force-app/main/default/objects/ConversationHistory__c/fields/Employee_id__c.field-meta.xml
<CustomField>
    <fullName>Employee_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hist_ricos_do_WhatsApp</relationshipName>
    <type>Lookup</type>
</CustomField>