force-app/main/default/objects/ConversationHistory__c/fields/Lead_id__c.field-meta.xml
<CustomField>
    <fullName>Lead_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Históricos do WhatsApp</relationshipLabel>
    <relationshipName>Historicos_do_WhatsApp</relationshipName>
    <type>Lookup</type>
</CustomField>