force-app/main/default/objects/ConversationHistory__c/fields/Opportunity_id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Históricos do WhatsApp</relationshipLabel>
    <relationshipName>Hist_ricos_do_WhatsApp</relationshipName>
    <type>Lookup</type>
</CustomField>