force-app/main/default/objects/ConversationHistory__c/fields/Updated_at__c.field-meta.xml
<CustomField>
    <fullName>Updated_at__c</fullName>
    <label>Atualizado em</label>
    <type>DateTime</type>
</CustomField>