force-app/main/default/objects/ConversationHistory__c/validationRules/Conversation_test.validationRule-meta.xml
<ValidationRule>
    <fullName>Conversation_test</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Message__c)</errorConditionFormula>
    <errorMessage>&quot;Preencha o campo de mensagem&quot;</errorMessage>
</ValidationRule>